last week resources

--- a/schedule.html
+++ b/schedule.html
@@ -792,6 +792,12 @@ Reorienting a motion. Crossfading.</p>
 <li>
 <p><a href="https:https://www.unrealengine.com/en-US/">Unreal Engine</a></p>
 </li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cd587f-5b89-4628-aacd-adf701587b23">Skins and meshes in blender: workshop</a></p>
+</li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e79bb6eb-92b9-4c24-b6cc-adfa0128adac">Unity move tree demo</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -800,7 +806,7 @@ Reorienting a motion. Crossfading.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-01 10:52:24 -0500
+Last updated 2021-12-10 19:29:47 -0500
 </div>
 </div>
 </body>
