--- a/index.html
+++ b/index.html
@@ -40,10 +40,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p><strong>Assignment 10:</strong> <a href="asst10-ik.html">Reach for your goals</a>: <strong>Extended: Due Dec 3</strong></p>
-</li>
-<li>
-<p><a href="week12-ik-worksheet.html">Lab - IK Worksheet</a>: <strong>Due Dec 2</strong></p>
+<p><strong>Final Exam</strong>: self-scheduled, 3 hours, open book/laptop, <a href="https://www.brynmawr.edu/access-services/students/procedures-and-schedules-final-exams-fall-2021">See here for details</a></p>
 </li>
 </ul>
 </div>
@@ -407,6 +404,12 @@ Reorienting a motion. Crossfading.</p>
 <li>
 <p><a href="https:https://www.unrealengine.com/en-US/">Unreal Engine</a></p>
 </li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=55cd587f-5b89-4628-aacd-adf701587b23">Skins and meshes in blender: workshop</a></p>
+</li>
+<li>
+<p><a href="https://brynmawr.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=e79bb6eb-92b9-4c24-b6cc-adfa0128adac">Unity move tree demo</a></p>
+</li>
 </ul>
 </div></div></td>
 </tr>
@@ -748,7 +751,7 @@ know that help and support are available. Staff members are trained to support s
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2021-12-01 10:52:57 -0500
+Last updated 2021-12-10 19:31:27 -0500
 </div>
 </div>
 </body>
